fix shortcodes on mobile

--- a/sass/_shortcodes.scss
+++ b/sass/_shortcodes.scss
@@ -2,14 +2,14 @@
 
 .youtube {
     > iframe {
-        width: 600px;
+        width: 100%;
         height: 340px;
     }
 }
 
 .vimeo {
     > iframe {
-        width: 600px;
+        width: 100%;
         height: 340px;
     }
 }
